--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 </head>
 <body style = "background-image:url('images/rahul.PNG'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello Rahul!!!!!!!!!!</h2>
+<h2 ALIGN=CENTER>Hello Rahul!!!!!!!!!!</h2>
 </body>
 </html>
