--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title> Pandey's world </title>
 </head>
 <body style = "background-image:url('images/rahul.PNG'); background-size: 100%">
-<h2 ALIGN=CENTER>Hello Rahul!!!!!!!!!!!!!!!!!!!!</h2>
+<h2 ALIGN=CENTER>Hello Rahul!!!!!!!!!!!!!!!</h2>
 </body>
 </html>
