--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title> Pandey's world </title>
 </head>
-<body style = "background-image:url('images/rahul.PNG'); background-size: 100%">
+<body style = "background-image:url('images/rahul.png'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello Rahul!!!!</h2>
 </body>
 </html>
